[package]
name = "paillier-crypto"
version = "0.1.0"
edition = "2021"
authors = ["CleanPegasus <me@cleanpegasus.dev>"]
description = "Partial Homomorphic Encryption with Paillier Cryptosystem"
license = "MIT"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1.46"
num-traits = "0.2"
rand = "0.8"
